# pdf-to-epub-converter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
docs/: TECHNICAL_PLAN.md
pdf_to_epub/: __init__.py
pdf_to_epub/ingest/: __init__.py  pdf_loader.py
src/pdf_to_epub/: cli.py
src/pdf_to_epub/classify/: __init__.py  image_coverage.py  page_classifier.py  text_layer.py
src/pdf_to_epub/document/: __init__.py  builder.py  models.py
src/pdf_to_epub/epub/: __init__.py  writer.py
src/pdf_to_epub/extract/: __init__.py  models.py  page_extractor.py
src/pdf_to_epub/ingest/: metadata.py  pdf_loader.py  permissions.py
src/pdf_to_epub/ocr/: __init__.py  fallback.py  models.py
src/pdf_to_epub/reconstruct/: __init__.py  models.py  reading_order.py
src/pdf_to_epub/render/: __init__.py  xhtml.py
src/pdf_to_epub/report/: __init__.py  conversion.py
src/pdf_to_epub/validate/: __init__.py  epubcheck.py
src/pdf_to_epub/visuals/: __init__.py  asset_extractor.py  models.py
tests/: test_document_model.py  test_epub_writer.py  test_extract.py  test_ingest.py  test_ocr.py  test_page_classifier.py  test_reconstruct.py  test_render.py  test_report.py  test_validate.py  test_visuals.py
