[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-to-epub-converter"
version = "0.1.0"
description = "Local, heuristics-first PDF to EPUB 3 converter."
readme = "docs/TECHNICAL_PLAN.md"
requires-python = ">=3.9"
dependencies = [
  "PyMuPDF>=1.26",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.5",
  "pytest>=8",
  "ruff>=0.6",
]

[project.scripts]
pdf-to-epub = "pdf_to_epub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP",
  "W",
]
ignore = [
  "UP045", # Keep Python 3.9-compatible Optional[...] annotations.
]

[tool.mypy]
python_version = "3.9"
mypy_path = "src"
packages = ["pdf_to_epub"]
files = ["src", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["fitz"]
ignore_missing_imports = true
